Minor Changes to main Html page

--- a/MySQLDapperDebug/Views/App/Index.cshtml
+++ b/MySQLDapperDebug/Views/App/Index.cshtml
@@ -4,6 +4,7 @@
 <head>
     <title>Data Acquisition System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
@@ -20,7 +21,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">Trends</a></li>
                 </ul>
             </nav>
-            <div class="col-sm border border-dark">
+            <div id="UserInput" class="col-sm border border-dark">
                 <div class="container">
                     <div>
                         <form>
@@ -31,13 +32,14 @@
                     <div>
                         <select name="Database">
                             <option value="">Database</option>
-                            <option value="tempA">Option A</option>
-                            <option value="tempB">Option B</option>
-                            <option value="tempC">Option C</option>
+                            <option value="MySQL">MySQL</option>
+                            <option value="Firebird">Firebird</option>
+                            <option value="PostGRE">PostGRE</option>
+                            <option value="MongoDB">MongoDB</option>
                         </select>
                         <select name="Machine">
                             <option value="">Machine</option>
-                            <option value="tempA">Option A</option>
+                            <option value="Machine 1">Machine 1</option>
                             <option value="tempB">Option B</option>
                             <option value="tempC">Option C</option>
                         </select>
@@ -81,8 +83,7 @@
                         Plotly.newPlot('myDiv', data);</script>
                 </div>
                 <hr />
-                <div>
-                    <h1>Example Table</h1>
+                <div id="table">
                     <table class="table table-hover">
                         <thead>
                             <tr>
