--- a/MySQLDapperDebug/Views/App/ReadData.cshtml
+++ b/MySQLDapperDebug/Views/App/ReadData.cshtml
@@ -86,7 +86,7 @@
                             <option value="postgre">PostGRE</option>
                             <option value="">MongoDB</option>
                         </select>
-                        <select name="Machine">
+                        <select id="Machine">
                             <option value="">Machine</option>
                             <option value="Machine 1">Machine 1</option>
                             <option value="tempB">Option B</option>
